update: Terminei a parte de request e response, apenas ajustando umas coisas